fixed gallery image overlapping
maybe added some beta hover/hold zoom photos

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -28,7 +28,7 @@ img{
 .gridauto{
   display: grid;
   grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
-  grid-auto-rows: 360px;
+  grid-auto-rows: 370px;
 }
 
 .galtitle{
@@ -49,6 +49,13 @@ img{
   width: 80vw;
   margin: auto;
   padding-top: 10vmin;
+}
+
+img:hover{
+  width: 600px; 
+  height: 600px;
+  margin: auto;
+  z-index: 1;
 }
 
 #gal4{
